# django-signals-cloudevents

./: .gitignore  MANIFEST.in  README.rst  __init__.py  apps.py  django_cloudevents.py  settings.py  setup.cfg  setup.py  sources.py  tests.py
django_signals_cloudevents/: __init__.py  settings.py  tests.py
